part-3-flexibility/Store-flexible/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.8.2.jar;C:\Users\lana\Documents\MusicOrg\+libs\jl1.0.1.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible
-d
C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files (x86)\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\ComputerStore.java
<---- end of javadoc command ---->
Loading source file C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\ComputerStore.java...
Constructing Javadoc information...
C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\ComputerStore.java:35: error: cannot find symbol
    public ComputerStore(Arraylist<Computers> computers, ArrayList<Components> components)
                         ^
  symbol:   class Arraylist
  location: class ComputerStore
C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\ComputerStore.java:35: error: cannot find symbol
    public ComputerStore(Arraylist<Computers> computers, ArrayList<Components> components)
                                   ^
  symbol:   class Computers
  location: class ComputerStore
C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\ComputerStore.java:35: error: cannot find symbol
    public ComputerStore(Arraylist<Computers> computers, ArrayList<Components> components)
                                                                   ^
  symbol:   class Components
  location: class ComputerStore
C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\Computer.java:44: error: cannot find symbol
    public Computer(ArrayList<Component> newComponents )
                    ^
  symbol:   class ArrayList
  location: class Computer
Standard Doclet version 1.8.0_40
Building tree for all the packages and classes...
Generating C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\doc\ComputerStore.html...
C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\ComputerStore.java:111: warning - @param argument "newComputer" is not a parameter name.
C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\ComputerStore.java:168: warning - @param argument "componentType" is not a parameter name.
Generating C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\doc\package-frame.html...
Generating C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\doc\package-summary.html...
Generating C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\doc\allclasses-frame.html...
Generating C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\doc\allclasses-noframe.html...
Generating C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\doc\index.html...
Generating C:\Users\lana\sdf\sda-computer-store\part-3-flexibility\Store-flexible\doc\stylesheet.css...
6 warnings
